--- a/package.json
+++ b/package.json
@@ -10,7 +10,27 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.282.0",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@next-auth/mongodb-adapter": "^1.1.1",
+    "@tiptap/extension-character-count": "^2.1.12",
+    "@tiptap/extension-code": "^2.1.12",
+    "@tiptap/extension-code-block-lowlight": "^2.1.12",
+    "@tiptap/extension-document": "^2.1.12",
+    "@tiptap/extension-dropcursor": "^2.1.12",
+    "@tiptap/extension-focus": "^2.1.12",
+    "@tiptap/extension-highlight": "^2.1.12",
+    "@tiptap/extension-link": "^2.1.12",
+    "@tiptap/extension-paragraph": "^2.1.12",
+    "@tiptap/extension-subscript": "^2.1.12",
+    "@tiptap/extension-superscript": "^2.1.12",
+    "@tiptap/extension-text": "^2.1.12",
+    "@tiptap/extension-text-align": "^2.1.12",
+    "@tiptap/extension-typography": "^2.1.12",
+    "@tiptap/extension-underline": "^2.1.12",
+    "@tiptap/pm": "^2.1.12",
+    "@tiptap/react": "^2.1.12",
+    "@tiptap/starter-kit": "^2.1.12",
     "autoprefixer": "^10.4.13",
     "axios": "^1.3.4",
     "eslint": "8.35.0",
